added Cancel Documents, close #6
